zu #289 highlighting, collapse fix

--- a/resources/less/gui.less
+++ b/resources/less/gui.less
@@ -519,7 +519,7 @@ div.toc {
         vertical-align:middle;
     }
 
-    .active {
+    span.active {
         font-weight:800;
     }
 }
